# Translate-model

./: README.md  pyproject.toml
.github/workflows/: CI.yml
src/: config.py
src/evaluators/: evaluator.py
src/loaders/: __init__.py  base_loader.py  csv_loader.py  json_loader.py  loader_factory.py
src/orchestrator/: orchestrator.py
src/translators/: translator.py
